broke resume button but fixed the about section. need to work on aligning buttons in about me.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -690,7 +690,6 @@ section,
 .hero .social-links {
   display: flex;
   gap: 20px;
-  justify-content: center; /* centers horizontally */
 }
 
 .hero .social-links a {
